configure app.js in one location

--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/broerjuang/Express_Authentication_and_Authorization/issues"
   },
-  "homepage": "https://github.com/broerjuang/Express_Authentication_and_Authorization#readme"
+  "homepage": "https://github.com/broerjuang/Express_Authentication_and_Authorization#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "jade": "^1.11.0",
+    "mongodb": "^2.2.11",
+    "mongoose": "^4.6.5"
+  }
 }
