--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "express": "^4.14.0",
     "jade": "^1.11.0",
     "mongodb": "^2.2.11",
-    "mongoose": "^4.6.5"
+    "mongoose": "^4.6.5",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   }
 }
